# ilpedante-mirror

./: .ruby-gemset  Gemfile  README.md  _config.yml  pyproject.toml  setup.cfg
ilpedante_mirror/: bulk_download.py
