[project]
name = "ilpedante_mirror"
authors = [
{ name = "Enucatl", email = "1423701+Enucatl@users.noreply.github.com" },
]
license = { text = "CC-BY-SA" }
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
  "beautifulsoup4",
  "click",
  "loguru",
  "markdownify",
  "pandas",
  "requests",
  "tqdm",
]
dynamic = ["version"]

[build-system]
requires = [
    "setuptools >= 63",
    "wheel",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tools.setuptools-git-versioning]
enabled = true

[tools.ruff]
select = ["ALL"]

[project.scripts]
bulk_download = "ilpedante_mirror.bulk_download:main"
