[metadata]
name = ilpedante_mirror
version_config = True
author = Enucatl
url = https://github.com/enucatl/ilpedante-mirror
description = safeguarding il pedante from getting cancelled
long_description = file: README.md
long_description_content_type = text/markdown
license = CC-BY-SA

[options]
packages = find:
install_requires = 
    click
    pandas
    tqdm
    beautifulsoup4
    requests
    markdownify
setup_requires =
    setuptools-git-versioning

[options.extras_require]
development = 
    pytest

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
